--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,23 +10,51 @@
     margin: 0;
 }
 
-.slide {
+.swiper-slide {
+    /* margin: 0 !important; */
+    padding: 0;
+    /* width: 400px !important; */
+}
+
+.slideGallery {
     margin-right: none;
     padding: 3rem 1rem;
     height: 100%;
 }
 @media (min-width: 1024px) {
-    .slide {
+    .slideGallery {
         padding: 3rem 3rem;
     }  
 }
 @media (min-width: 1440px) {
-    .slide {
+    .slideGallery {
         max-height: 90vh;
         padding: 3rem 5rem;
     }
-    .img {
+    .slideGallery {
         overflow: hidden;
         object-fit: none;
     }
 }
+
+.slideProjects {
+    margin: 0;
+    padding: 3rem 0 5rem;
+    width: 275px;
+    /* height: 100%; */
+}
+/* @media (min-width: 1024px) {
+    .slideGallery {
+        padding: 3rem 3rem;
+    }  
+}
+@media (min-width: 1440px) {
+    .slideGallery {
+        max-height: 90vh;
+        padding: 3rem 5rem;
+    }
+    .slideGallery {
+        overflow: hidden;
+        object-fit: none;
+    }
+} */
